--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,12 +2,20 @@
 
 {% block content %}
 	{% for post in posts %}
-		<div class="post">
-    		<div class="date">
-            	{{ post.published_date }}
-        	</div>
-        	<h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
-        	<p>{{ post.text|linebreaks }}</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-9">
+					<div class="post">
+        				<h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+        				<p>{{ post.text|linebreaks }}</p>
+        			</div>
+    			</div>
+				<div class="col-xs-3">
+    				<div class="date">
+            			{{ post.published_date }}
+        			</div>
+        		</div>
+    		</div>
     	</div>
     {% endfor %}
 {% endblock content %}
